apps/media/prowlarr/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prowlarr-gateway
  namespace: media
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: prowlarr.corruptmane.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - name: prowlarr-tls
